--- a/Mobile.KMT.csproj
+++ b/Mobile.KMT.csproj
@@ -53,4 +53,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Services\Interfaces\" />
+	  <Folder Include="Services\Implementations\" />
+	  <Folder Include="Views\" />
+	</ItemGroup>
+
 </Project>
