--- a/Mobile.KMT.csproj
+++ b/Mobile.KMT.csproj
@@ -54,6 +54,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Messages\Responses\" />
+	  <Folder Include="Messages\Requests\" />
+	  <Folder Include="Models\" />
 	  <Folder Include="Services\Interfaces\" />
 	  <Folder Include="Services\Implementations\" />
 	  <Folder Include="Views\" />
