Populated Login page, created navigation from main to login page, created alerts static functions

--- a/Mobile.KMT.csproj
+++ b/Mobile.KMT.csproj
@@ -61,4 +61,16 @@
 	  <Folder Include="Services\Implementations\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Views\LoginPage.xaml.cs">
+	    <DependentUpon>LoginPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
